<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/viewLogo"
        android:layout_width="412dp"
        android:layout_height="189dp"
        android:background="@color/material_dynamic_primary70"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="92dp"
        android:layout_height="39dp"
        android:text="@string/nombre"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLogo"
        app:layout_constraintVertical_bias="0.119" />



    <TextView
        android:id="@+id/textView2"
        android:layout_width="94dp"
        android:layout_height="49dp"
        android:text="@string/primer_apellido"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLogo"
        app:layout_constraintVertical_bias="0.249" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="94dp"
        android:layout_height="49dp"
        android:text="@string/segundo_apellido"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLogo"
        app:layout_constraintVertical_bias="0.409" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="87dp"
        android:layout_height="32dp"
        android:text="@string/tel_fono"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLogo"
        app:layout_constraintVertical_bias="0.56" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="202dp"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/david"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLogo"
        app:layout_constraintVertical_bias="0.105" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="207dp"
        android:layout_height="51dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/rodr_guez"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLogo"
        app:layout_constraintVertical_bias="0.246" />

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="207dp"
        android:layout_height="51dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/coto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLogo"
        app:layout_constraintVertical_bias="0.407"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextText7"
        android:layout_width="207dp"
        android:layout_height="51dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/_72896071"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLogo"
        app:layout_constraintVertical_bias="0.568" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

    <Button
        android:id="@+id/button"
        android:layout_width="330dp"
        android:layout_height="55dp"
        android:text="Guardar Perfil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLogo"
        app:layout_constraintVertical_bias="0.785" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="96dp"
        android:layout_height="110dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewLogo"
        app:layout_constraintEnd_toEndOf="@+id/viewLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewLogo"
        app:srcCompat="@android:mipmap/sym_def_app_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>